--- a/application/src/main/resources/messages.properties
+++ b/application/src/main/resources/messages.properties
@@ -1,3 +1,18 @@
+contactbook.frame.main.title=Contact Book
+contactbook.frame.add.title=Add a new contact
+contactbook.frame.info.title=Contact info
+
+contactbook.frame.main.placeholder.browser.contacts=Search for a contact...
+contactbook.frame.main.placeholder.browser.hobbies=Search for a hobby...
+contactbook.frame.main.placeholder.input.hobbies=Add a hobby...
+
+contactbook.frame.add.placeholder.name=Name...
+contactbook.frame.add.placeholder.surnames=Surnames...
+contactbook.frame.add.placeholder.address=Address...
+contactbook.frame.add.placeholder.notes=Notes...
+contactbook.frame.add.placeholder.telephone=Telephone...
+contactbook.frame.add.placeholder.mail=Mail...
+
 contactbook.frame.btn.remove=REMOVE
 contactbook.frame.btn.consult=CONSULT
 contactbook.frame.btn.add=ADD
