--- a/application/src/main/resources/messages_es.properties
+++ b/application/src/main/resources/messages_es.properties
@@ -1,3 +1,18 @@
+contactbook.frame.main.title=Agenda
+contactbook.frame.add.title=Añadir un nuevo contacto
+contactbook.frame.info.title=Información del contacto
+
+contactbook.frame.main.placeholder.browser.contacts=Buscar un contacto...
+contactbook.frame.main.placeholder.browser.hobbies=Buscar una afición...
+contactbook.frame.main.placeholder.input.hobbies=Añadir una afición...
+
+contactbook.frame.add.placeholder.name=Nombre...
+contactbook.frame.add.placeholder.surnames=Apellidos...
+contactbook.frame.add.placeholder.address=Dirección...
+contactbook.frame.add.placeholder.notes=Notas...
+contactbook.frame.add.placeholder.telephone=Teléfono...
+contactbook.frame.add.placeholder.mail=Correo...
+
 contactbook.frame.btn.remove=ELIMINAR
 contactbook.frame.btn.consult=CONSULTAR
 contactbook.frame.btn.add=AÑADIR
